Update the codes and file structure

--- a/src-bs3/index.html
+++ b/src-bs3/index.html
@@ -9,8 +9,8 @@
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
     crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./dist/css/styles.css">
-  <link rel="shortcut icon" href="./dist/img/bullbasaur.png" type="image/x-icon">
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="shortcut icon" href="./img/bullbasaur.png" type="image/x-icon">
   <title>Pokemon Cards</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
         <div class="navbar-header">
           <a class="navbar-logo" href="https://mustafa-sarshar.github.io/portfolio-website/" target="_blank"
             rel="noopener noreferrer">
-            <img src="./dist/img/mussar_logo.ico"
+            <img src="./img/mussar_logo.ico"
               alt="Personal logo of Mustafa Sarshar, written as muSSar, which is an abreviation for his first and last name">
           </a>
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#pageNavbar">
@@ -48,7 +48,7 @@
     <h1 class="page-main__title">
       <a href="https://pokedex.org/" target="_blank" rel="noopener noreferrer" class="page-main__title-link">
         Pokemon
-        <img src="./src-bs3/img/bullbasaur.png" alt="bullbasaur" class="page-main__title-logo">
+        <img src="./img/bullbasaur.png" alt="bullbasaur" class="page-main__title-logo">
       </a>
     </h1>
     <div class="pokemon-container">
@@ -100,12 +100,13 @@
       </div>
     </div>
   </div>
-  <script src="./dist/js/polyfill.js"></script>
-  <script src="./dist/js/fetch.umd.js"></script>
-  <script src="./dist/js/tota11y.min.js"></script>
-  <script src="./dist/js/jquery.min.js"></script>
+  <script src="./js/polyfill.js"></script>
+  <script src="./js/fetch.umd.js"></script>
+  <script src="./js/tota11y.min.js"></script>
+  <script src="./js/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <script src="./dist/js/scripts.mini.js"></script>
+  <!-- <script src="./js/scripts.mini.js"></script> -->
+  <script src="./js/scripts.js"></script>
   <noscript>Your browser doesn't support JavaScript</noscript>
 </body>
 </html>
